--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@
     --sans-font: 'DM Sans', sans-serif;
 }
 
-.center{
+.center-row{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -44,13 +44,13 @@ a{
 }
 
 h1{
-    color: var(--neutral-color-color);
+    color: var(--surface-color);
     font-size: 2rem;
     text-transform: uppercase;
 }
 
 h2{
-    color: var(--neutral-color);
+    color: var(--surface-color);
     font-family: var(--lobster-font);
     font-weight: 400;
     letter-spacing: 0.06em;
