--- a/css/header.css
+++ b/css/header.css
@@ -46,6 +46,6 @@ nav{
 
 .center-header-sections{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0 1rem;
 }
